Edited featurettes class and added Chicco Bravo and Vista as first two items.

--- a/index.html
+++ b/index.html
@@ -130,11 +130,12 @@ extra_css: "carousel.css"
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Car Seat + Stroller = <span class="text-muted">Travel System</span></h2>
+          <p class="lead">One thing you absolutely have to bring to the birth center is a car seat, and while all infant car seats look very similar, the most convenient would be the one which comes with a travel system. It will include a base which you install into the back seat of your car, a car seat itself and a stroller (carrier) part which the car seat clicks on to. This allow to move your baby in and out of the car without having to wake her up! Absolute must have. The one I chose – Chicco Bravo – also transforms into a regular stroller which will carry your baby from ~6 month (that’s when they start sitting up) through toddler years. Good to know: you can purchase multiple car bases if you use more than one car. </p>
         </div>
         <div class="col-md-5">
-          {% include icons/placeholder.svg width="500" height="500" background="#eee" color="#aaa" class="bd-placeholder-img-lg featurette-image img-fluid mx-auto" %}
+          <img class="baby-item"src="img/ChiccoBravo.jpg" alt="Chicco Bravo Trio Travel System">
+          <!--{% include icons/placeholder.svg width="500" height="500" background="#eee" color="#aaa" class="bd-placeholder-img-lg featurette-image img-fluid mx-auto" %}-->
         </div>
       </div>
 
@@ -142,11 +143,38 @@ extra_css: "carousel.css"
 
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
-          <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Alternative: <span class="text-muted">bassinet included</span></h2>
+          <p class="lead">One downside of Chicco Bravo system is that it doesn’t come with a bassinet, which means that if you want to take your baby on a walk, she’ll have to stay in a somewhat upright position strapped to the seat for the whole time. Bassinet, on the opposite side, provides the comfort of the crib and your baby will lay down in it perfectly straight. I personally didn’t enjoy long walks for the first half a year of my baby’s life, so for my needs – such as shopping trips – Chicco Bravo worked just fine. My friend, however, spent hours pushing the stroller at the nearest beach park. Well, she was lucky to have the park, and then that’s how her baby slept… So, her family chose to invest into a more functional, more solid and definitely fancier option.</p>
         </div>
         <div class="col-md-5 order-md-1">
-          {% include icons/placeholder.svg width="500" height="500" background="#eee" color="#aaa" class="bd-placeholder-img-lg featurette-image img-fluid mx-auto" %}
+          <img src="img/UppaBabyVista.jpg" class="img-fluid" alt="Responsive image">
+          <!--{% include icons/placeholder.svg width="500" height="500" background="#eee" color="#aaa" class="bd-placeholder-img-lg featurette-image img-fluid mx-auto" %}-->
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Car Seat + Stroller = <span class="text-muted">Travel System</span></h2>
+          <p class="lead">One thing you absolutely have to bring to the birth center is a car seat, and while all infant car seats look very similar, the most convenient would be the one which comes with a travel system. It will include a base which you install into the back seat of your car, a car seat itself and a stroller (carrier) part which the car seat clicks on to. This allow to move your baby in and out of the car without having to wake her up! Absolute must have. The one I chose – Chicco Bravo – also transforms into a regular stroller which will carry your baby from ~6 month (that’s when they start sitting up) through toddler years. Good to know: you can purchase multiple car bases if you use more than one car. </p>
+        </div>
+        <div class="col-md-5">
+          <img class="baby-item"src="img/ChiccoBravo.jpg" alt="Chicco Bravo Trio Travel System">
+          <!--{% include icons/placeholder.svg width="500" height="500" background="#eee" color="#aaa" class="bd-placeholder-img-lg featurette-image img-fluid mx-auto" %}-->
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7 order-md-2">
+          <h2 class="featurette-heading">Alternative: <span class="text-muted">bassinet included</span></h2>
+          <p class="lead">One downside of Chicco Bravo system is that it doesn’t come with a bassinet, which means that if you want to take your baby on a walk, she’ll have to stay in a somewhat upright position strapped to the seat for the whole time. Bassinet, on the opposite side, provides the comfort of the crib and your baby will lay down in it perfectly straight. I personally didn’t enjoy long walks for the first half a year of my baby’s life, so for my needs – such as shopping trips – Chicco Bravo worked just fine. My friend, however, spent hours pushing the stroller at the nearest beach park. Well, she was lucky to have the park, and then that’s how her baby slept… So, her family chose to invest into a more functional, more solid and definitely fancier option.</p>
+        </div>
+        <div class="col-md-5 order-md-1">
+          <img src="img/UppaBabyVista.jpg" class="img-fluid" alt="Responsive image">
+          <!--{% include icons/placeholder.svg width="500" height="500" background="#eee" color="#aaa" class="bd-placeholder-img-lg featurette-image img-fluid mx-auto" %}-->
         </div>
       </div>
 
