Hid the buttons on carousel.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ extra_css: "carousel.css"
             <div class="carousel-caption text-left">
               <h1>Getting ready for a baby?</h1>
               <p>She might be little, but she's a person just like you and me - she requires her own bed, wardrobe, food and bath items. Use our checkilist to make sure you haven't forgotten anything vital.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>-->
             </div>
           </div>
         </div>
@@ -70,7 +70,7 @@ extra_css: "carousel.css"
             <div class="carousel-caption">
               <h1>Is it overwhlming?</h1>
               <p>Books and online resources suggest buying dozens of things, but do you really need all of that? We offer a list of good-to-have minimum - items that will get you comfortably through the first 6 month of your child life - no more, no less!</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>-->
             </div>
           </div>
         </div>
@@ -81,7 +81,7 @@ extra_css: "carousel.css"
             <div class="carousel-caption text-right">
               <h1>Quality or price?</h1>
               <p>A a resanobale consumer and a Mom, we're trying to save on everything except for health and safety.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>-->
             </div>
           </div>
         </div>
