Removed card deck, added design and initial content.

--- a/index.html
+++ b/index.html
@@ -96,6 +96,57 @@ extra_css: "carousel.css"
       </a>
     </div>
 
+    <!--Adding a part of Pricing code to build a chacklist-->
+
+    <!--Hiding the top of the Pricing div
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+      <h1 class="display-4">Pricing</h1>
+      <p class="lead">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
+    </div>
+    -->
+
+<div class="container">
+
+    <div class="card mb-4 shadow-sm text-center mx-auto" style="width:500px">
+      <div class="card-header">
+        <h4 class="my-0 font-weight-normal" style="color:#ffffff">Baby items to get:</h4>
+      </div>
+      <div class="card-body">
+        <ul class="list-unstyled mt-2 mb-2">
+          <li><div><input type="checkbox"> Travel system: carseat + carseat carrier/stroller</div></li>
+          <li><div><input type="checkbox"> Baby backpack</div></li>
+          <li><div><input type="checkbox"> Stroller blanket</div></li>
+          <li><div><input type="checkbox"> Crib</div></li>
+          <li><div><input type="checkbox"> Crib mattress</div></li>
+          <li><div><input type="checkbox"> Crib matress cover</div></li>
+          <li><div><input type="checkbox"> Crib sheets</div></li>
+          <li><div><input type="checkbox"> Swaddling blanket</div></li>
+          <li><div><input type="checkbox"> Sleep sack</div></li>
+          <li><div><input type="checkbox"> Pacifier x2</div></li>
+          <li><div><input type="checkbox"> Bouncy seat</div></li>
+          <li><div><input type="checkbox"> Bassinet</div></li>
+          <li><div><input type="checkbox"> Breast pump</div></li>
+          <li><div><input type="checkbox"> Set of extra bottles</div></li>
+          <li><div><input type="checkbox"> Nipple cream</div></li>
+          <li><div><input type="checkbox"> Breastfeeding bra</div></li>
+          <li><div><input type="checkbox"> Formula</div></li>
+          <li><div><input type="checkbox"> Bottles with preemie nipples x6</div></li>
+          <li><div><input type="checkbox"> </div></li>
+          <li><div><input type="checkbox"> </div></li>
+          <li><div><input type="checkbox"> </div></li>
+          <li><div><input type="checkbox"> </div></li>
+          <li><div><input type="checkbox"> </div></li>
+          <li><div><input type="checkbox"> </div></li>
+          <li><div><input type="checkbox"> </div></li>
+          <li><div><input type="checkbox"> </div></li>
+
+        </ul>
+        <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
+      </div>
+    </div>
+  </div>
+</div>
+
 
     <!-- Marketing messaging and featurettes
     ================================================== -->
