Added 2 carddecks with 3 cards each.

--- a/index.html
+++ b/index.html
@@ -106,44 +106,118 @@ extra_css: "carousel.css"
     -->
 
 <div class="container">
-
-    <div class="card mb-4 shadow-sm text-center mx-auto" style="width:500px">
-      <div class="card-header">
-        <h4 class="my-0 font-weight-normal" style="color:#ffffff">Baby items to get:</h4>
+  <div class="card-deck mb-3">
+    <div class="card mb-4 shadow-sm">
+      <div class="card-header text-center">
+        <h4 class="my-0 font-weight-normal" style="color:#ffffff">Travel time</h4>
       </div>
       <div class="card-body">
         <ul class="list-unstyled mt-2 mb-2">
-          <li><div><input type="checkbox"> Travel system: carseat + carseat carrier/stroller</div></li>
+          <li><div><input type="checkbox"> Carseat</div></li>
+          <li><div><input type="checkbox"> Carseat carrier/stroller</div></li>
           <li><div><input type="checkbox"> Baby backpack</div></li>
-          <li><div><input type="checkbox"> Stroller blanket</div></li>
+          <li><div><input type="checkbox"> Blanket</div></li>
+        </ul>
+        <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
+      </div>
+    </div>
+
+    <div class="card mb-4 shadow-sm">
+      <div class="card-header text-center">
+        <h4 class="my-0 font-weight-normal" style="color:#ffffff">Baby fashion</h4>
+      </div>
+      <div class="card-body">
+        <ul class="list-unstyled mt-2 mb-2">
+          <li><div><input type="checkbox"> Onesies x6 – size Newborn</div></li>
+          <li><div><input type="checkbox"> Sleepers x4  – size Newborn</div></li>
+          <li><div><input type="checkbox"> Onesies x6 – size 1 month</div></li>
+          <li><div><input type="checkbox"> Sleepers x4  – size 1 month</div></li>
+          <li><div><input type="checkbox"> >> warm clothes: hat, jacket, soft shoes</div></li>
+         </ul>
+        <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
+      </div>
+    </div>
+
+    <div class="card mb-4 shadow-sm">
+      <div class="card-header text-center">
+        <h4 class="my-0 font-weight-normal" style="color:#ffffff">Bath time</h4>
+      </div>
+      <div class="card-body">
+        <ul class="list-unstyled mt-2 mb-2">
+          <li><div><input type="checkbox"> Infant bathtub</div></li>
+          <li><div><input type="checkbox"> Baby shampoo</div></li>
+          <li><div><input type="checkbox"> Baby bath towel</div></li>
+          <li><div><input type="checkbox"> Baby wash clothes</div></li>
+        </ul>
+        <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<div class="container">
+  <div class="card-deck mb-3">
+    <div class="card mb-4 shadow-sm">
+      <div class="card-header text-center">
+        <h4 class="my-0 font-weight-normal" style="color:#ffffff">Nap time</h4>
+      </div>
+      <div class="card-body">
+        <ul class="list-unstyled mt-2 mb-2">
           <li><div><input type="checkbox"> Crib</div></li>
           <li><div><input type="checkbox"> Crib mattress</div></li>
-          <li><div><input type="checkbox"> Crib matress cover</div></li>
+          <li><div><input type="checkbox"> Crib matress cover x2</div></li>
           <li><div><input type="checkbox"> Crib sheets</div></li>
           <li><div><input type="checkbox"> Swaddling blanket</div></li>
           <li><div><input type="checkbox"> Sleep sack</div></li>
           <li><div><input type="checkbox"> Pacifier x2</div></li>
           <li><div><input type="checkbox"> Bouncy seat</div></li>
-          <li><div><input type="checkbox"> Bassinet</div></li>
+          <li><div><input type="checkbox"> >> Bassinet</div></li>
+        </ul>
+        <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
+      </div>
+    </div>
+
+    <div class="card mb-4 shadow-sm">
+      <div class="card-header text-center">
+        <h4 class="my-0 font-weight-normal" style="color:#ffffff">Lunch time</h4>
+      </div>
+      <div class="card-body">
+        <ul class="list-unstyled mt-2 mb-2">
           <li><div><input type="checkbox"> Breast pump</div></li>
           <li><div><input type="checkbox"> Set of extra bottles</div></li>
           <li><div><input type="checkbox"> Nipple cream</div></li>
           <li><div><input type="checkbox"> Breastfeeding bra</div></li>
           <li><div><input type="checkbox"> Formula</div></li>
           <li><div><input type="checkbox"> Bottles with preemie nipples x6</div></li>
-          <li><div><input type="checkbox"> </div></li>
-          <li><div><input type="checkbox"> </div></li>
-          <li><div><input type="checkbox"> </div></li>
-          <li><div><input type="checkbox"> </div></li>
-          <li><div><input type="checkbox"> </div></li>
-          <li><div><input type="checkbox"> </div></li>
-          <li><div><input type="checkbox"> </div></li>
-          <li><div><input type="checkbox"> </div></li>
-
+          <li><div><input type="checkbox"> Sterilizer</div></li>
+          <li><div><input type="checkbox"> Baby Bottle brush</div></li>
+          <li><div><input type="checkbox"> Burp clothes/receiving blankets</div></li>
         </ul>
         <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
       </div>
     </div>
+
+    <div class="card mb-4 shadow-sm">
+      <div class="card-header text-center">
+        <h4 class="my-0 font-weight-normal" style="color:#ffffff">Refresh time</h4>
+      </div>
+      <div class="card-body">
+        <ul class="list-unstyled mt-2 mb-2">
+          <li><div><input type="checkbox"> Changing table</div></li>
+          <li><div><input type="checkbox"> Changing mat</div></li>
+          <li><div><input type="checkbox"> Changing mat cover</div></li>
+          <li><div><input type="checkbox"> >> Waterproof pads</div></li>
+          <li><div><input type="checkbox"> Diapers - size Newborn</div></li>
+          <li><div><input type="checkbox"> Diapers - size 1</div></li>
+          <li><div><input type="checkbox"> Baby wipes</div></li>
+          <li><div><input type="checkbox"> >> Wipe holder</div></li>
+          <li><div><input type="checkbox"> Diaper rush ointment</div></li>
+        </ul>
+        <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
+      </div>
+    </div>
+
   </div>
 </div>
 
