Changed color of 3 cards to blue, added italics.

--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@ extra_css: "carousel.css"
     -->
 
     <div class="container">
-      <div class="card-deck mb-3">
-        <div class="card mb-4 shadow-sm">
-          <div class="card-header text-center">
-            <h4 class="my-0 font-weight-normal" style="color:#ffffff">Travel time</h4>
+      <div class="card-deck mb-3 babylist">
+        <div class="card card-pink mb-4 shadow-sm">
+          <div class="card-header card-header-pink text-center">
+            <h4 class="my-0 font-weight-normal card-heading" style="color:#ffffff">Travel time</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
@@ -117,29 +117,30 @@ extra_css: "carousel.css"
               <li><div><input type="checkbox"> Carseat carrier/stroller</div></li>
               <li><div><input type="checkbox"> Baby backpack</div></li>
               <li><div><input type="checkbox"> Blanket</div></li>
+              <li><div><input type="checkbox"> <i>Optional: car mirror, car shades</i></div></li>
             </ul>
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
           </div>
         </div>
 
-        <div class="card mb-4 shadow-sm">
-          <div class="card-header text-center">
+        <div class="card card-blue mb-4 shadow-sm">
+          <div class="card-header card-header-blue text-center">
             <h4 class="my-0 font-weight-normal" style="color:#ffffff">Baby fashion</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
-              <li><div><input type="checkbox"> Onesies x6 – size Newborn</div></li>
-              <li><div><input type="checkbox"> Sleepers x4  – size Newborn</div></li>
-              <li><div><input type="checkbox"> Onesies x6 – size 1 month</div></li>
-              <li><div><input type="checkbox"> Sleepers x4  – size 1 month</div></li>
-              <li><div><input type="checkbox"> >> warm clothes: hat, jacket, soft shoes</div></li>
+              <li><div><input type="checkbox"> Onesies - size Newborn - x6</div></li>
+              <li><div><input type="checkbox"> Sleepers - size Newborn - x4</div></li>
+              <li><div><input type="checkbox"> Onesies - size 1 month - x6</div></li>
+              <li><div><input type="checkbox"> Sleepers - size 1 month - x4</div></li>
+              <li><div><input type="checkbox"> <i>Optional: jacket, hat, soft shoes</i></div></li>
              </ul>
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
           </div>
         </div>
 
-        <div class="card mb-4 shadow-sm">
-          <div class="card-header text-center">
+        <div class="card card-pink mb-4 shadow-sm">
+          <div class="card-header card-header-pink text-center">
             <h4 class="my-0 font-weight-normal" style="color:#ffffff">Bath time</h4>
           </div>
           <div class="card-body">
@@ -148,6 +149,7 @@ extra_css: "carousel.css"
               <li><div><input type="checkbox"> Baby shampoo</div></li>
               <li><div><input type="checkbox"> Baby bath towel</div></li>
               <li><div><input type="checkbox"> Baby wash clothes</div></li>
+              <li><div><input type="checkbox"> <i>Optional: rinser cup</i></div></li>
             </ul>
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
           </div>
@@ -158,8 +160,8 @@ extra_css: "carousel.css"
 
     <div class="container">
       <div class="card-deck mb-3">
-        <div class="card mb-4 shadow-sm">
-          <div class="card-header text-center">
+        <div class="card card-blue mb-4 shadow-sm">
+          <div class="card-header card-header-blue text-center">
             <h4 class="my-0 font-weight-normal" style="color:#ffffff">Nap time</h4>
           </div>
           <div class="card-body">
@@ -172,14 +174,14 @@ extra_css: "carousel.css"
               <li><div><input type="checkbox"> Sleep sack</div></li>
               <li><div><input type="checkbox"> Pacifier x2</div></li>
               <li><div><input type="checkbox"> Bouncy seat</div></li>
-              <li><div><input type="checkbox"> >> Bassinet</div></li>
+              <li><div><input type="checkbox"> <i> Optional: bassinet</i></div></li>
             </ul>
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
           </div>
         </div>
 
-        <div class="card mb-4 shadow-sm">
-          <div class="card-header text-center">
+        <div class="card card-pink mb-4 shadow-sm">
+          <div class="card-header card-header-pink text-center">
             <h4 class="my-0 font-weight-normal" style="color:#ffffff">Lunch time</h4>
           </div>
           <div class="card-body">
@@ -198,8 +200,8 @@ extra_css: "carousel.css"
           </div>
         </div>
 
-        <div class="card mb-4 shadow-sm">
-          <div class="card-header text-center">
+        <div class="card card-blue mb-4 shadow-sm">
+          <div class="card-header card-header-blue text-center">
             <h4 class="my-0 font-weight-normal" style="color:#ffffff">Refresh time</h4>
           </div>
           <div class="card-body">
@@ -207,11 +209,11 @@ extra_css: "carousel.css"
               <li><div><input type="checkbox"> Changing table</div></li>
               <li><div><input type="checkbox"> Changing mat</div></li>
               <li><div><input type="checkbox"> Changing mat cover</div></li>
-              <li><div><input type="checkbox"> >> Waterproof pads</div></li>
+              <li><div><input type="checkbox"> <i> Optional: waterproof pads</i></div></li>
               <li><div><input type="checkbox"> Diapers - size Newborn</div></li>
               <li><div><input type="checkbox"> Diapers - size 1</div></li>
               <li><div><input type="checkbox"> Baby wipes</div></li>
-              <li><div><input type="checkbox"> >> Wipe holder</div></li>
+              <li><div><input type="checkbox"> <i> Optional: wipe holder</i></div></li>
               <li><div><input type="checkbox"> Diaper rush ointment</div></li>
             </ul>
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
@@ -227,9 +229,6 @@ extra_css: "carousel.css"
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
     <div class="container marketing">
-
-
-
 
       <!-- START THE FEATURETTES -->
 
