--- a/index.html
+++ b/index.html
@@ -53,34 +53,34 @@ extra_css: "carousel.css"
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img style="object-fit: cover; overflow: hidden;"src="img/headerimage1.jpg" alt="Baby Evelynn">
+          <img style="object-fit: cover; overflow: hidden;"src="img/carousel-1.jpg" alt="Baby Evelynn">
           {% include icons/placeholder.svg width="100%" height="100%" background="#777" color="#777" text=" " title=" " %}
           <div class="container">
             <div class="carousel-caption text-left">
               <h1>Getting ready for a baby?</h1>
-              <p>She might be little, but she's a person just like you and me - she requires her own bed, wardrobe, food and bath items. Use our checkilist to make sure you haven't forgotten anything vital.</p>
+              <p>Use our checkilist to make sure you haven't forgotten anything vital.</p>
               <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>-->
             </div>
           </div>
         </div>
         <div class="carousel-item">
-          <img style="object-fit: cover; overflow: hidden;"src="img/headerimage2.jpg" alt="Baby Evelynn">
+          <img style="object-fit: cover; overflow: hidden;"src="img/carousel-2.jpg" alt="Baby Evelynn">
           {% include icons/placeholder.svg width="100%" height="100%" background="#777" color="#777" text=" " title=" " %}
           <div class="container">
             <div class="carousel-caption">
-              <h1>Is it overwhlming?</h1>
-              <p>Books and online resources suggest buying dozens of things, but do you really need all of that? We offer a list of good-to-have minimum - items that will get you comfortably through the first 6 month of your child life - no more, no less!</p>
+              <h1>Do I need it all?</h1>
+              <p>Others may suggest a ridiculous amount. Here we have a list of good-to-have minimum.</p>
               <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>-->
             </div>
           </div>
         </div>
         <div class="carousel-item">
-          <img style="object-fit: cover; overflow: hidden;"src="img/headerimage3.jpg" alt="Baby Evelynn">
+          <img style="object-fit: cover; overflow: hidden;"src="img/carousel-3.jpg" alt="Baby Evelynn">
           {% include icons/placeholder.svg width="100%" height="100%" background="#777" color="#777" text=" " title=" " %}
           <div class="container">
             <div class="carousel-caption text-right">
               <h1>Quality or price?</h1>
-              <p>A a resanobale consumer and a Mom, we're trying to save on everything except for health and safety.</p>
+              <p>Saving on unnecessary, not health and safety.</p>
               <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>-->
             </div>
           </div>
