Updated cards' content.

--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@ extra_css: "carousel.css"
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
-              <li><div><input type="checkbox"> Carseat</div></li>
-              <li><div><input type="checkbox"> Carseat carrier/stroller</div></li>
-              <li><div><input type="checkbox"> Baby backpack</div></li>
+              <li><div><input type="checkbox"> Car seat</div></li>
+              <li><div><input type="checkbox"> Car seat carrier/stroller</div></li>
+              <li><div><input type="checkbox"> Diaper backpack</div></li>
               <li><div><input type="checkbox"> Blanket</div></li>
-              <li><div><input type="checkbox"> <i>Optional: car mirror, car shades</i></div></li>
+              <li><div><input type="checkbox"> <i>Optional: car shades, mirror</i></div></li>
             </ul>
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
           </div>
@@ -129,10 +129,10 @@ extra_css: "carousel.css"
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
-              <li><div><input type="checkbox"> Onesies - size Newborn - x6</div></li>
-              <li><div><input type="checkbox"> Sleepers - size Newborn - x4</div></li>
-              <li><div><input type="checkbox"> Onesies - size 1 month - x6</div></li>
-              <li><div><input type="checkbox"> Sleepers - size 1 month - x4</div></li>
+              <li><div><input type="checkbox"> Onesies - size Newborn - x5</div></li>
+              <li><div><input type="checkbox"> Jumpsuits - size Newborn - x3</div></li>
+              <li><div><input type="checkbox"> Onesies - size 1 month - x5</div></li>
+              <li><div><input type="checkbox"> Jumpsuits - size 1 month - x3</div></li>
               <li><div><input type="checkbox"> <i>Optional: jacket, hat, soft shoes</i></div></li>
              </ul>
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
@@ -145,11 +145,11 @@ extra_css: "carousel.css"
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
-              <li><div><input type="checkbox"> Infant bathtub</div></li>
-              <li><div><input type="checkbox"> Baby shampoo</div></li>
+              <li><div><input type="checkbox"> Infant bath tub</div></li>
+              <li><div><input type="checkbox"> Baby wash & shampoo</div></li>
               <li><div><input type="checkbox"> Baby bath towel</div></li>
               <li><div><input type="checkbox"> Baby wash clothes</div></li>
-              <li><div><input type="checkbox"> <i>Optional: rinser cup</i></div></li>
+              <li><div><input type="checkbox"> Rinser</div></li>
             </ul>
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
           </div>
@@ -168,12 +168,12 @@ extra_css: "carousel.css"
             <ul class="list-unstyled mt-2 mb-2">
               <li><div><input type="checkbox"> Crib</div></li>
               <li><div><input type="checkbox"> Crib mattress</div></li>
-              <li><div><input type="checkbox"> Crib matress cover x2</div></li>
+              <li><div><input type="checkbox"> Waterproof crib pads x2</div></li>
               <li><div><input type="checkbox"> Crib sheets</div></li>
-              <li><div><input type="checkbox"> Swaddling blanket</div></li>
+              <li><div><input type="checkbox"> Swaddle blanket</div></li>
               <li><div><input type="checkbox"> Sleep sack</div></li>
               <li><div><input type="checkbox"> Pacifier x2</div></li>
-              <li><div><input type="checkbox"> Bouncy seat</div></li>
+              <li><div><input type="checkbox"> Bouncer or swing</div></li>
               <li><div><input type="checkbox"> <i> Optional: bassinet</i></div></li>
             </ul>
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
@@ -188,13 +188,13 @@ extra_css: "carousel.css"
             <ul class="list-unstyled mt-2 mb-2">
               <li><div><input type="checkbox"> Breast pump</div></li>
               <li><div><input type="checkbox"> Set of extra bottles</div></li>
-              <li><div><input type="checkbox"> Nipple cream</div></li>
-              <li><div><input type="checkbox"> Breastfeeding bra</div></li>
-              <li><div><input type="checkbox"> Formula</div></li>
               <li><div><input type="checkbox"> Bottles with preemie nipples x6</div></li>
+              <li><div><input type="checkbox"> Formula</div></li>
               <li><div><input type="checkbox"> Sterilizer</div></li>
-              <li><div><input type="checkbox"> Baby Bottle brush</div></li>
+              <li><div><input type="checkbox"> Baby bottle brush</div></li>
+              <li><div><input type="checkbox"> Dishwasher basket</div></li>
               <li><div><input type="checkbox"> Burp clothes/receiving blankets</div></li>
+              <li><div><input type="checkbox"> Nipple cream</div></li>
             </ul>
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
           </div>
@@ -206,15 +206,15 @@ extra_css: "carousel.css"
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
-              <li><div><input type="checkbox"> Changing table</div></li>
-              <li><div><input type="checkbox"> Changing mat</div></li>
-              <li><div><input type="checkbox"> Changing mat cover</div></li>
-              <li><div><input type="checkbox"> <i> Optional: waterproof pads</i></div></li>
+              <li><div><input type="checkbox"> Changing pad</div></li>
+              <li><div><input type="checkbox"> Changing pad cover</div></li>
+              <li><div><input type="checkbox"> Waterproof pads</div></li>
               <li><div><input type="checkbox"> Diapers - size Newborn</div></li>
               <li><div><input type="checkbox"> Diapers - size 1</div></li>
               <li><div><input type="checkbox"> Baby wipes</div></li>
               <li><div><input type="checkbox"> <i> Optional: wipe holder</i></div></li>
               <li><div><input type="checkbox"> Diaper rush ointment</div></li>
+              <li><div><input type="checkbox"> Diaper pail</div></li>
             </ul>
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
           </div>
