Added Amazon info and button, decreased featurette-devider margin.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ extra_css: "carousel.css"
         </ul>
         <form class="form-inline mt-2 mt-md-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <button class="btn btn-outline-pink my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
     </nav>
@@ -238,6 +238,8 @@ extra_css: "carousel.css"
         <div class="col-md-7">
           <h2 class="featurette-heading">Car Seat + Stroller = <span class="text-muted">Travel System</span></h2>
           <p class="lead">One thing you absolutely have to bring to the birth center is a car seat, and while all infant car seats look very similar, the most convenient would be the one which comes with a travel system. It will include a base which you install into the back seat of your car, a car seat itself and a stroller (carrier) part which the car seat clicks on to. This allow to move your baby in and out of the car without having to wake her up! Absolute must have. The one I chose – Chicco Bravo – also transforms into a regular stroller which will carry your baby from ~6 month (that’s when they start sitting up) through toddler years. Good to know: you can purchase multiple car bases if you use more than one car. </p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Chicco Bravo Trio Travel System:</span> $379.99, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm">Check it up!</button>
         </div>
         <div class="col-md-5">
           <img class="baby-item"src="img/ChiccoBravo.jpg" alt="Chicco Bravo Trio Travel System">
@@ -251,9 +253,11 @@ extra_css: "carousel.css"
         <div class="col-md-7 order-md-2">
           <h2 class="featurette-heading">Alternative: <span class="text-muted">bassinet included</span></h2>
           <p class="lead">One downside of Chicco Bravo system is that it doesn’t come with a bassinet, which means that if you want to take your baby on a walk, she’ll have to stay in a somewhat upright position strapped to the seat for the whole time. Bassinet, on the opposite side, provides the comfort of the crib and your baby will lay down in it perfectly straight. I personally didn’t enjoy long walks for the first half a year of my baby’s life, so for my needs – such as shopping trips – Chicco Bravo worked just fine. My friend, however, spent hours pushing the stroller at the nearest beach park. Well, she was lucky to have the park, and then that’s how her baby slept… So, her family chose to invest into a more functional, more solid and definitely fancier option.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">UPPAbaby Vista Stroller & MESA Car Seat Bundle:</span> $1,199.98, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm">Check it up!</button>
         </div>
         <div class="col-md-5 order-md-1">
-          <img src="img/UppaBabyVista.jpg" class="img-fluid" alt="Responsive image">
+          <img src="img/UppaBabyVistaBundle.jpg" class="img-fluid" alt="Responsive image">
           <!--{% include icons/placeholder.svg width="500" height="500" background="#eee" color="#aaa" class="bd-placeholder-img-lg featurette-image img-fluid mx-auto" %}-->
         </div>
       </div>
